syntax = "proto3";

package proto;

option go_package = "auth-service/docs/proto";

//Чтобы скомпилить файлы pb.go
//protoc --go_out=paths=source_relative:. --go-grpc_out=paths=source_relative:. cmd/app/docs/proto/auth.proto

service AuthService {
  rpc VerifyToken (VerifyTokenRequest) returns (VerifyTokenResponse);
}

message VerifyTokenRequest {
  string access_token = 1;
}

message VerifyTokenResponse {
  int64 user_id = 1;
  string role = 2;
}
